--- a/styles/agify.css
+++ b/styles/agify.css
@@ -55,6 +55,10 @@ input[type="text"] {
   box-sizing: border-box;
   font-family: serif;
 }
+.additional-info {
+  text-align: justify;
+  margin: 5px 0 0 0;
+}
 input[type="submit"],
 button {
   width: 100%;
