--- a/styles/style.css
+++ b/styles/style.css
@@ -1,46 +1,27 @@
+body {
+  font-family: serif;
+}
+
 .content {
-  height: 100vh;
+  min-height: 100vh;
   background-color: lightyellow;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.container {
-  margin: 0 50px;
-  height: 250px;
-  width: 200px;
-  text-align: center;
-  border-radius: 10px;
-  background-color: rgb(255, 255, 234);
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+a {
+  text-decoration: none;
+  color: white;
 }
 
-h1 {
-  margin: 65px 0 10px 0;
-  padding: 0 15px;
-  font-size: medium;
-  font-family: serif;
-}
-
-p {
-  margin: 0 0 45px 0;
-  padding: 0 15px;
-  font-family: serif;
-}
-
-button {
-  width: 100px;
-  height: 30px;
+button,
+input[type="submit"] {
   background-color: #8b7176;
+  color: white;
   box-shadow: 7px 6px 28px 1px rgba(0, 0, 0, 0.24);
   border: none;
   border-radius: 5px;
   cursor: pointer;
-}
-
-a {
-  text-decoration: none;
-  color: white;
   font-family: serif;
 }
