--- a/styles/cocktails.css
+++ b/styles/cocktails.css
@@ -1,12 +1,36 @@
-select,
-input[type="text"] {
-  padding: 12px 20px;
-  margin: 8px 0 0 0;
-}
-
 select {
+  appearance: none;
+  margin: 0;
+  padding: 12px 20px;
   font-size: 15px;
   cursor: pointer;
+}
+
+.select {
+  padding: 0;
+  margin: 8px 0 15px 0;
+  position: relative;
+  display: inline-block;
+  width: 100%;
+  line-height: 22px;
+  font-size: 12px;
+  color: var(--black);
+  cursor: pointer;
+}
+
+.select::after {
+  content: '\25b6';
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  color: var(--light-brown);
+  transform: translateY(-50%) rotate(90deg);
+  pointer-events: none;
+  transition: all 0.3s;
+}
+
+.select:active::after {
+  color: var(--light-yellow);
 }
 
 option:first-child {
@@ -15,4 +39,17 @@ option:first-child {
 
 h1 {
   font-size: medium;
+}
+
+input[type='text'] {
+  padding: 12px 20px;
+  margin: 8px 0;
+}
+
+.alert-message {
+  color: rgb(255, 0, 68);
+}
+
+p {
+  margin: 5px 0;
 }
