--- a/styles/index.css
+++ b/styles/index.css
@@ -4,8 +4,8 @@
   width: 200px;
   text-align: center;
   border-radius: 10px;
-  background-color: rgb(255, 255, 234);
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  background-color: var(--lighter-yellow);
+  box-shadow: 0 4px 8px 0 var(--almost-black), 0 6px 20px 0 var(--almost-black);
 }
 
 h1 {
