--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,7 @@
 :root {
   --black: #000000;
   --almost-black: #00000030;
+  --red: #ff0044;
   --light-grey: #bbb;
   --light-brown: #8b7176;
   --light-yellow: #ffffe0;
@@ -26,11 +27,10 @@ a {
   color: var(--white);
 }
 
-button,
-input[type='submit'] {
+button {
   background-color: var(--light-brown);
   color: var(--white);
-  box-shadow: 7px 6px 28px 1px rgba(0, 0, 0, 0.24);
+  box-shadow: 7px 6px 28px 1px var(--almost-black);
   border: none;
   border-radius: 5px;
   cursor: pointer;
