--- a/styles/cocktails.css
+++ b/styles/cocktails.css
@@ -33,8 +33,16 @@ select {
   color: var(--light-yellow);
 }
 
+option {
+  color: var(--black);
+}
+
 option:first-child {
   display: none;
+}
+
+select:required:invalid {
+  color: var(--light-grey);
 }
 
 h1 {
